--- a/css/partials/_login.scss
+++ b/css/partials/_login.scss
@@ -21,7 +21,7 @@
     position: relative;
     top: 20px;
     font-size: 14px;
-    color: red;
+    color: black;
     a {
         text-decoration: none;
         color: rgb(156, 40, 176);
