--- a/css/main.scss
+++ b/css/main.scss
@@ -1,8 +1,10 @@
 @import 'partials/login';
+@import 'partials/dashboard';
 @import url('https://fonts.googleapis.com/css?family=Dosis|Kumar+One+Outline|Quicksand');
 
     body {
         margin: 0 auto;
+        padding: 0;
         position: relative;
         font-family: 'Quicksand', sans-serif;
 }
