--- a/css/main.css
+++ b/css/main.css
@@ -256,6 +256,9 @@ header {
         list-style-type: none;
         display: inline;
         margin-right: 20px; }
+        header nav ul li a {
+          color: #ffffff;
+          text-decoration: none; }
 
 section {
   padding: 0 !important;
@@ -267,49 +270,58 @@ section {
     section div img {
       width: 100%; }
   section div.blogTopRow {
-    text-align: center;
-    position: relative;
-    top: 20px; }
-    section div.blogTopRow img {
-      width: 300px;
-      height: 300px;
-      border: 1px solid #ccc;
-      padding: 5px;
-      opacity: 1;
-      margin-top: 40px; }
-    section div.blogTopRow img:hover {
-      opacity: 0.5;
-      transition: opacity 1s ease; }
-    section div.blogTopRow span {
-      width: 400px !important;
-      text-align: left !important;
-      margin: 0 auto !important; }
-    section div.blogTopRow h4 {
-      margin-top: 10px; }
-    section div.blogTopRow a {
-      color: #9C28B0;
-      width: 200px;
-      height: 30px;
-      font-size: 16px;
-      border: none;
-      border-radius: 5px;
-      margin: 10px 0px 30px 0px; }
+    text-align: center; }
+    section div.blogTopRow .blogList {
+      padding-bottom: 80px; }
+      section div.blogTopRow .blogList img {
+        width: 300px;
+        height: 300px;
+        border: 1px solid #ccc;
+        padding: 5px;
+        opacity: 0.7;
+        margin-top: 100px; }
+      section div.blogTopRow .blogList img:hover {
+        opacity: 1;
+        transition: opacity 1s ease; }
+      section div.blogTopRow .blogList span {
+        max-width: 300px !important;
+        margin: 0 auto !important;
+        font-size: 14px;
+        text-align: center;
+        padding: 10px 0px; }
+      section div.blogTopRow .blogList h4 {
+        font-size: 18px;
+        font-weight: bold;
+        margin-top: 10px;
+        text-align: center; }
+      section div.blogTopRow .blogList a {
+        color: #9C28B0;
+        width: 200px;
+        height: 30px;
+        font-size: 16px;
+        border: none;
+        border-radius: 5px;
+        margin: 5px 0px 10px 0px; }
 
-.footer {
-  margin-top: 10px; }
-  .footer h6 {
-    margin-top: 50px;
-    text-align: left; }
-  .footer form {
-    margin-top: 20px; }
-    .footer form input {
+footer {
+  background-color: #ccc;
+  padding: 100px 0px 20px 0px; }
+  footer ul {
+    text-decoration: none; }
+    footer ul li {
+      text-decoration: none; }
+  footer .footer {
+    margin-top: 10px; }
+    footer .footer h6 {
+      text-align: center; }
+    footer .footer form input {
       width: 90%;
       padding: 10px;
       height: 40px;
       border: none;
       box-shadow: 0px 0px 5px #ccc;
       border-radius: 5px; }
-    .footer form button {
+    footer .footer form button {
       width: 90%;
       margin-top: 10px;
       height: 40px;
