--- a/css/partials/_blog.scss
+++ b/css/partials/_blog.scss
@@ -29,6 +29,10 @@ header {
                 list-style-type: none;
                 display: inline;
                 margin-right: 20px;
+                a {
+                    color: #ffffff;
+                    text-decoration: none;
+                }
             }
         }
     }
@@ -47,29 +51,34 @@ section{
     }
     div.blogTopRow {
         text-align: center;
-        position: relative;
-        top: 20px;
+        .blogList {
         img {
             width: 300px;
             height: 300px;
             border: 1px solid #ccc;
             padding: 5px;
-            opacity: 1;
-            margin-top: 40px;
+            opacity: 0.7;
+            margin-top: 100px;
             
             
         }
         img:hover {
-            opacity: 0.5;
+            opacity: 1;
             transition: opacity 1s ease;
         }
         span {
-            width: 400px !important;
-            text-align: left !important;
+            max-width: 300px !important;
             margin: 0 auto !important;
+            font-size: 14px;
+            text-align: center;
+           // background-color: #f8f8f8;
+            padding:10px 0px;
         }
         h4 {
+            font-size: 18px;
+            font-weight: bold;
             margin-top: 10px;
+            text-align: center;
         }
         a {
             color: #9C28B0;
@@ -78,36 +87,45 @@ section{
             font-size: 16px;
             border: none;
             border-radius: 5px;
-            margin: 10px 0px 30px 0px;
+            margin: 5px 0px 10px 0px;
         }
+        padding-bottom: 80px;
+    }
     }
 }
 
-
-.footer {
-    margin-top: 10px;
-    h6{
-        margin-top: 50px;
-        text-align: left;
-    }
-    form{
-        margin-top: 20px;
-        input{
-            width: 90%;
-            padding: 10px;
-            height: 40px;
-            border: none;
-            box-shadow: 0px 0px 5px #ccc;
-            border-radius: 5px;
+footer {
+    background-color: #ccc;
+    padding: 100px 0px 20px 0px;
+    ul {
+        text-decoration: none;
+        li {
+            text-decoration: none;
         }
-        button {
-            width: 90%;
-            margin-top: 10px;
-            height: 40px;
-            border: none;
-            border-radius: 5px;
-            background-color: #9C28B0;
-            color: #ffffff;
+    }
+    .footer {
+        margin-top: 10px;
+        h6{
+            text-align: center;
+        }
+        form{
+            input{
+                width: 90%;
+                padding: 10px;
+                height: 40px;
+                border: none;
+                box-shadow: 0px 0px 5px #ccc;
+                border-radius: 5px;
+            }
+            button {
+                width: 90%;
+                margin-top: 10px;
+                height: 40px;
+                border: none;
+                border-radius: 5px;
+                background-color: #9C28B0;
+                color: #ffffff;
+            }
         }
     }
 }
